fix: align teasers/jumbotron

--- a/frontend/src/assets/style/main.scss
+++ b/frontend/src/assets/style/main.scss
@@ -47,6 +47,10 @@ a {
   color: var(--text-primary-color);
 }
 
+.teaser {
+  margin-top: -1.2rem;
+}
+
 .jumbotron {
   padding: 2rem 1rem;
   margin-bottom: 2rem;
